# Fastest_Image_Pattern_Matching

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  build.bat  build.sh  build_debug.sh  build_release.sh  build_test.sh  performance_test.sh  test_build.sh  test_debug.sh  test_matching.cpp  test_matching.py
DVPCamera/: install.sh
DVPCamera/Demo/: DVPCamera.h  Demo.cpp  Dvp2StreamCallback.cpp  IPConfigDemo.cpp  Makefile
DVPCamera/dtpcie/: PreAllocConfig.ini  dt_pcie.ko  install_driver.sh  update_driver.sh  update_param.sh
DVPCamera/dtpcie/module/: .Module.symvers.cmd  .dsdebug.o.cmd  .dt_pcie.ko.cmd  .dt_pcie.mod.cmd  .dt_pcie.mod.o.cmd  .dt_pcie.o.cmd  .modules.order.cmd  .pcidrv.o.cmd  Makefile  control.h  dsdebug.c  dsdebug.h  dt_pcie.h  dt_pcie.mod  dt_pcie.mod.c  gige.h  include.h  modules.order  pcidrv.c  public.h  regs.h  test  test.c
DVPCamera/filter/: dsfilter.ko  update_filter.sh
DVPCamera/filter/module/: .Module.symvers.cmd  .dsdebug.o.cmd  .dsfilter.ko.cmd  .dsfilter.mod.cmd  .dsfilter.mod.o.cmd  .dsfilter.o.cmd  .dsmain.o.cmd  .modules.order.cmd  Makefile  dscore.a_bak  dsfilter.mod  dsfilter.mod.c  dsmain.c  modules.order
ORBMatch/: ORBFeatureMatcher.cpp  ORBFeatureMatcher.h
Test Images/case3/: test_templ.yaml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/FastestImagePatternMatching_autogen/: mocs_compilation.cpp
build_debug/FastestImagePatternMatching_autogen/6YEA5652QU/: moc_MatchToolDialog.cpp
build_debug/FastestImagePatternMatching_autogen/include/: ui_MatchToolDialog.h
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: CameraPreviewDialog.h  DataStructures.h  MatchToolDialog.h  SIMDOptimization.h  TemplateMatcher.h
src/: CameraPreviewDialog.cpp  MatchToolDialog.cpp  MatchToolDialog.ui  SIMDOptimization.cpp  TemplateMatcher.cpp  main.cpp
ui/: MatchToolDialog.ui
